--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "permissions":["scripting", "activeTab"],
     "content_scripts": [
         {
-            "matches": ["https://ap-northeast-1.console.aws.amazon.com/*"],
+            "matches": ["https://*.console.aws.amazon.com/*"],
             "js": [
                 "./scripts/content-script.js"
             ]
