storageから値取得するところまで

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,7 @@
             ]
         }
     ],
-    "options_page": "./view/options.html"
+    "action": {
+        "default_popup": "./view/options.html"
+    }
 }
