functionFixed: ・複数URL保存に対応 ・seviceボックス修正
bugFixed:
・ポップアップ表示時複数URLが表示されないバグを修正

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
             "matches": ["https://*.console.aws.amazon.com/*"],
             "js": [
                 "./scripts/content-script.js"
-            ]
+            ],
+            "type": "module"
         }
     ],
     "action": {
