すべてのページで読み込み時に実行されるようにmanifest.jsonを変更

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "permissions":["scripting", "activeTab", "storage", "tabs"],
     "content_scripts": [
         {
-            "matches": ["https://*.console.aws.amazon.com/*"],
+            "matches": ["<all_urls>"],
             "js": [
                 "./scripts/content-script.js"
             ],
