アイコンを設定

--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,16 @@
         "permissions": false
     },
     "action": {
-        "default_popup": "./view/popup.html"
-    }
+        "default_popup": "./view/popup.html",
+        "default_icon": "./images/icon16.png"
+    },
+    
+    "icons": {
+    "16": "./images/icon16.png",
+    "32": "./images/icon32.png",
+    "48": "./images/icon48.png",
+    "128": "./images/icon128.png"
+  }
+
+
 }
