--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3, 
     "version": "0.9.5", 
     "name": "Color Changer | Websites Color Editor", 
-    "description": "You can change any part's color, such as buttons, header or background.",
+    "description": "You can change any part's color, such as buttons, header and background.",
     "permissions":["storage", "tabs"],
     "content_scripts": [
         {
